Mini_MenuPanels Changelog
*************************

Menu_MiniPanels 6.x-1.x-dev, xxxx-xx-xx
***************************************

* #1239292 by DamienMcKenna: Missed another line from rerolling the #1230622
  patch that caused the settings page to break.


Menu_MiniPanels 6.x-1.3-rc1, 2011-08-04
***************************************

* #1230622 by DamienMcKenna: Missed a line when I originally rerolled this
  patch.
* #943842 by DamienMcKenna: Allow the qTip file to be loaded from multiple
  paths, changing the default to "sites/all/libraries/qtip", but cache the
  path to offset the performance hit.
* #943842 by DamienMcKenna: Now includes proper Libraries API support as the
  first location checked for the qTip JS file.
* #1234654 by DamienMcKenna: Slight refactoring of menu_minipanels_form_alter()
  to match the D7 branch more closely. Also tidied up a few small things - 
  comments, output variables, etc.


Menu_MiniPanels 6.x-1.3-beta2, 2011-07-31
*****************************************

* #1230686 by davidwhthomas: Fatfingered the last patch.


Menu_MiniPanels 6.x-1.3-beta1, 2011-07-30
*****************************************

* #1199426 by DamienMcKenna: updated all comments to fit the Drupal coding
  standards.
* #1221566 by DamienMcKenna: Added hook_menu_minipanels_defaults_alter() to
  allow the defaults to be customized.
* #1230622 by davidwhthomas, DamienMcKenna: Separated admin functionality.
* #1148958 by lussoluca, DamienMcKenna: Added hook_menu_minipanels_style()
  and hook_menu_minipanels_styles() to allow creation of custom styles.
* #1234620 by DamienMcKenna: improve hook_init() implementation.
* #1185506 by DamienMcKenna: Indicate which fields are really required, don't
  output settings which are not required.
* #1199412 by DamienMcKenna: Separate the admin JS into its own file.
* #1230686 by muhleder, DamienMcKenna: Prevent duplicate content on DOM change.


Menu_MiniPanels 6.x-1.2, 2011-01-09
***********************************